# 3d-pointcloud-model-generator

./: CMakeLists.txt  README.md
include/: ModelGenerator.h  PointCloudProcessor.h
src/: ModelGenerator.cpp  PointCloudProcessor.cpp  main.cpp
